<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">YOTA Tether TTL</string>
    <string name="app_web_address" translatable="false">http://4pda.ru/forum/index.php?showtopic=647126</string>
    <string name="main_version" formatted="false">Version %s</string>
    <string name="main_current_ttl">Current TTL</string>
    <string name="main_ttl_windows" translatable="false">Windows (127)</string>
    <string name="main_ttl_unix" translatable="false">UNIX Android, Mac, IOS, PS, Xbox (63)</string>
    <string name="main_ttl_hint">Enter TTL</string>
    <string name="main_ttl_apply">Apply</string>
    <string name="main_ttl_message_init">Choose or enter value of TTL</string>
    <string name="main_ttl_message_done">Done! Now you can turn on tethering or portable hotspot.</string>
    <string name="main_ttl_message_done_auto">Done! Portable hotspot has been turned on.</string>
    <string name="main_ttl_error_cantReadValue">Unable to read value of TTL</string>
    <string name="main_ttl_error_empty">Enter value of TTL</string>
    <string name="main_ttl_error_between">The value must be from 1 to 255</string>
    <string name="main_iptables_button">Try IPTables rule</string>
    <string name="main_iptables_message_done">Done!</string>
    <string name="main_settings_button">Open \"Tethering &amp; portable hotspot\" in Settings</string>
    <string name="action_4pda" translatable="false">4PDA</string>
    <string name="applying">Applying TTL…</string>
    <string name="done">Done!</string>
    <string name="log">Log:</string>
    <string name="action_settings">Settings</string>
    <string name="bootup">Autostart</string>
    <string name="general">General</string>
    <string name="misc">Miscellaneous</string>
    <string name="debugcheckbox_title">Debug mode</string>
    <string name="debugcheckbox_summary">Enabling debug mode</string>
    <string name="bootup_title">Autostart</string>
    <string name="bootup_summary">Enabling automatic applying TTL on device\'s startup</string>
    <string name="bootup_toast_title">Toasts</string>
    <string name="bootup_toast_summary">Enabling toasts about applying TTL</string>
    <string name="bootup_ttl_title">Value of TTL</string>
    <string name="bootup_ttl_summary">Value of TTL that applied at startup </string>
    <string name="wificheckbox_title">Turn on portable hotspot</string>
    <string name="wificheckbox_summary">Turn on portable hotspot after changing the TTL (only works on some versions of Android)</string>
    <string name="langlist_title">Language</string>
    <string name="langlist_summary">Application language.\nNeed restart application to apply changes.</string>
    <string name="selectmethod_title">Reconnect type</string>
    <string name="selectmethod_summary">"If it's failed, try another reconnect type"</string>
    <string name="langdialog_title">Select language:</string>
    <string name="selectmethoddialog_title">Select reconnect method:</string>
    <string name="restart">Restart application</string>
    <string name="ttlvalue_title">TTL in field</string>
    <string name="ttlvalue_summary">Value of TTL field, when the application starts</string>

    <string name="prefs_method_airplane">airplane</string>
    <string name="prefs_method_mobile">mobile</string>
    <string name="prefs_lang_default">default</string>
    <string name="prefs_onlaunch_ttl_default">63</string>
    <string name="prefs_method_off">off</string>

    <string-array name="method_array">
        <item>Airplane mode</item>
        <item>Mobile data</item>
        <item>"Don't reconnect"</item>
    </string-array>

</resources>
