<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/bootup">
        <CheckBoxPreference
            android:key="bootup"
            android:summary="@string/bootup_summary"
            android:title="@string/bootup_title">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="bootup_toast"
            android:summary="@string/bootup_toast_summary"
            android:title="@string/bootup_toast_title">
        </CheckBoxPreference>

        <EditTextPreference
            android:key="bootup_ttl"
            android:summary="@string/bootup_ttl_summary"
            android:title="@string/bootup_ttl_title"
            android:inputType="number">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <CheckBoxPreference
            android:key="wifi"
            android:summary="@string/wificheckbox_summary"
            android:title="@string/wificheckbox_title">
        </CheckBoxPreference>

        <ListPreference
            android:key="method"
            android:summary="@string/selectmethod_summary"
            android:title="@string/selectmethod_title"
            android:entries="@array/method_array"
            android:entryValues="@array/method_arrayvalues"
            android:dialogTitle="@string/selectmethoddialog_title">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc">
    <CheckBoxPreference
        android:key="debugm"
        android:summary="@string/debugcheckbox_summary"
        android:title="@string/debugcheckbox_title">
    </CheckBoxPreference>

    <ListPreference
        android:key="lang"
        android:summary="@string/langlist_summary"
        android:title="@string/langlist_title"
        android:entries="@array/lang_array"
        android:entryValues="@array/lang_arrayvalues"
        android:dialogTitle="@string/langdialog_title">
    </ListPreference>

    <PreferenceScreen android:title="@string/restart" android:key="restart">
    </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>